[package]
name = "cargo-ghp-upload"
version = "0.3.4"
authors = ["CAD97 <cad97@cad97.com>"]
description = "Upload documentation straight to GitHub Pages, maintaining branch separation and history"

homepage = "https://github.com/crate-ci/cargo-ghp-upload"
repository = "https://github.com/crate-ci/cargo-ghp-upload.git"
readme = "README.md"

keywords = ["CI", "Travis", "Travis-CI", "GitHub", "GitHub-Pages"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

license = "Apache-2.0/MIT"

edition = "2018"

[badges]
travis-ci = { repository = "crate-ci/cargo-ghp-upload" }
is-it-maintained-issue-resolution = { repository = "crate-ci/cargo-ghp-upload" }
is-it-maintained-open-issues = { repository = "crate-ci/cargo-ghp-upload" }
maintenance = { status = "actively-developed" }

[dependencies]
fs_extra = "1.2"
quicli = "0.4"
structopt = "0.2"
